--- a/opencart_cucumber/pom.xml
+++ b/opencart_cucumber/pom.xml
@@ -40,13 +40,19 @@
 	    <artifactId>selenium-java</artifactId>
 	    <version>4.20.0</version>
 	</dependency>
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-core -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-core</artifactId>
+    <version>7.19.0</version>
+</dependency>
 
    
        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
 		<dependency>
 		    <groupId>io.cucumber</groupId>
 		    <artifactId>cucumber-junit</artifactId>
-		    <version>7.17.0</version>
+		    <version>7.19.0</version>
 		    <scope>test</scope>
 		</dependency>
 
@@ -54,7 +60,7 @@
     <dependency>
 		    <groupId>io.cucumber</groupId>
 		    <artifactId>cucumber-java</artifactId>
-		    <version>7.17.0</version>
+		    <version>7.19.0</version>
 		</dependency> 
 
 		 <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
